# mcp_replay_dota2

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  dota_match_mcp_server.py  fight_38min.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  v2-architecture.md  versions.json
.github/workflows/: release.yml  test.yml
1.0.5.dev1/: 404.html  index.html  sitemap.xml
1.0.5.dev1/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.5.dev1/api/resources/: index.html
1.0.5.dev1/api/tools/: index.html
1.0.5.dev1/changelog/: index.html
1.0.5.dev1/examples/use-cases/: index.html
1.0.5.dev1/getting-started/docker/: index.html
1.0.5.dev1/getting-started/installation/: index.html
1.0.5.dev1/integrations/: index.html
1.0.5.dev1/integrations/anthropic-api/: index.html
1.0.5.dev1/integrations/autogen/: index.html
1.0.5.dev1/integrations/claude-code/: index.html
1.0.5.dev1/integrations/claude-desktop/: index.html
1.0.5.dev1/integrations/crewai/: index.html
1.0.5.dev1/integrations/fastmcp/: index.html
1.0.5.dev1/integrations/langchain/: index.html
1.0.5.dev1/integrations/langgraph/: index.html
1.0.5.dev1/integrations/mcp-sdk/: index.html
1.0.5.dev1/integrations/openai-api/: index.html
1.0.5.dev1/search/: search_index.json
1.0.6/: 404.html  index.html  sitemap.xml
1.0.6/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.6/api/resources/: index.html
1.0.6/api/tools/: index.html
1.0.6/changelog/: index.html
1.0.6/examples/use-cases/: index.html
1.0.6/getting-started/docker/: index.html
1.0.6/getting-started/installation/: index.html
1.0.6/integrations/: index.html
1.0.6/integrations/anthropic-api/: index.html
1.0.6/integrations/autogen/: index.html
1.0.6/integrations/claude-code/: index.html
1.0.6/integrations/claude-desktop/: index.html
1.0.6/integrations/crewai/: index.html
1.0.6/integrations/fastmcp/: index.html
1.0.6/integrations/langchain/: index.html
1.0.6/integrations/langgraph/: index.html
1.0.6/integrations/mcp-sdk/: index.html
1.0.6/integrations/openai-api/: index.html
1.0.9/: 404.html  index.html  sitemap.xml
1.0.9/REPLAY_PARSING_ARCHITECTURE/: index.html
1.0.9/api/resources/: index.html
1.0.9/api/tools/: index.html
1.0.9/changelog/: index.html
1.0.9/examples/use-cases/: index.html
1.0.9/getting-started/docker/: index.html
1.0.9/integrations/: index.html
1.0.9/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/REPLAY_PARSING_ARCHITECTURE/: index.html
1.1.0/changelog/: index.html
1.1.0/integrations/: index.html
1.1.0/search/: search_index.json
api/models/: index.html
api/resources/: index.html
api/tools/: index.html
changelog/: index.html
data/constants/: hero_counters.json
data/pro_scene/: leagues.json  teams.json
docs/: REPLAY_PARSING_ARCHITECTURE.md  changelog.md  index.md
docs/api/: models.md  resources.md  tools.md
docs/examples/: basic.md  match-analysis.md  use-cases.md
docs/getting-started/: configuration.md  docker.md  installation.md
docs/integrations/: anthropic-api.md  autogen.md  claude-code.md  claude-desktop.md  crewai.md  fastmcp.md  index.md  langchain.md  langgraph.md  mcp-sdk.md  openai-api.md
examples/basic/: index.html
examples/match-analysis/: index.html
examples/use-cases/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
integrations/: index.html
integrations/anthropic-api/: index.html
integrations/langchain/: index.html
integrations/mcp-sdk/: index.html
master/: 404.html  index.html  sitemap.xml
master/REPLAY_PARSING_ARCHITECTURE/: index.html
master/changelog/: index.html
master/integrations/: index.html
master/search/: search_index.json
search/: search_index.json
site/: index.html  sitemap.xml
site/changelog/: index.html
src/models/: __init__.py  combat_log.py  game_context.py  map_data.py  match_info.py  pro_scene.py
src/resources/: heroes_resources.py  map_resources.py  pro_scene_resources.py
src/tools/: combat_tools.py  fight_tools.py  heroes_tools.py
src/utils/: combat_log_parser.py  constants_fetcher.py  match_fetcher.py  match_info_parser.py  position_tracker.py  pro_scene_fetcher.py  replay_cache.py  timeline_parser.py
tests/: conftest.py  test_combat_log_parser.py  test_farming_service.py  test_hero_combat_analysis.py  test_heroes_resources.py  test_match_info_parser.py  test_pro_scene.py  test_replay_downloader.py  test_rotation_service.py  test_timeline_parser.py  test_use_cases.py
tests/examples/: test_match_8594217096.py
tests/resources/: test_pro_scene_resources.py
tests/utils/: test_match_fetcher.py  test_timeline_parser.py
(+90 files in other folders)
