[project]
name = "mcp-dota2-server"
version = "0.1.0"
description = "Model Context Protocol server for Dota 2 match analysis using replay files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
keywords = [
    "dota2",
    "mcp",
    "model-context-protocol",
    "replay",
    "analysis",
    "esports",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "fastmcp>=2.12.3",
    "python-opendota-sdk==7.39.5.1.dev1",
    "requests>=2.32.5",
    "python-manta==1.4.5.1.dev12",
    "aiohttp>=3.13.2",
    "diskcache>=5.6.3",
]

[project.urls]
Homepage = "https://github.com/DeepBlueCoding/mcp_replay_dota2"
Documentation = "https://deepbluecoding.github.io/mcp_replay_dota2/"
Repository = "https://github.com/DeepBlueCoding/mcp_replay_dota2"
"Bug Tracker" = "https://github.com/DeepBlueCoding/mcp_replay_dota2/issues"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pip>=25.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
python-manta = { index = "testpypi" }
python-opendota-sdk = { index = "testpypi" }

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mike>=2.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["var-annotated", "arg-type", "union-attr", "import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require replays or network access",
]
